# gogoboso2024

./: .gitignore  .pre-commit-config.yaml  README.md  build.py  pyproject.toml
.github/actions/setup-gobo2024/: action.yml
.github/workflows/: python-app.yml
bootstrap/: __init__.py  __main__.py  scraping.py
bootstrap/resources/: bootOptions.json  spotDetail.json
gobo2024/: __main__.py  db.py  protocol.py  scraping.py  types.py
script/: [2024年度]未達成.csv  [2024年度]達成済.csv  __main__.py  log.csv
tests/: conftest.py  test_boot_options.py
