[tool.poetry]
name = "gobo2024"
version = "0.0.0.dev0"
description = "GOGO房総デジタルポイントラリー データベース 2024"
authors = ["ijknabla <ijknabla@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"


[tool.poetry.group.static-test.dependencies]
mypy = "^1.11.2"
ruff = "^0.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
