[tool.poetry]
name = "gobo2024"
version = "0.0.0.dev0"
description = "GOGO房総デジタルポイントラリー データベース 2024"
authors = ["ijknabla <ijknabla@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
pyppeteer = "^2.0.0"
sqlalchemy = "^2.0.32"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"


[tool.poetry.group.static-test.dependencies]
mypy = "^1.11.2"
ruff = "^0.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
namespace_packages = true
explicit_package_bases = true

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = ["ALL"]
ignore = [
    # Ignore incompatible rules
    "D203", "D212",
    # Ignore rules that may cause conflict with formatter
    "COM812",
    "ISC001",
    # Ignore not important rules
    "ANN101",
    "D100", "D101", "D102", "D103", "D104", "D106", "D107",
    "D205", "D404",
    # Ignore security rules
    "S311",
]
