[tool.poetry]
name = "gobo2024"
version = "0.0.0.dev0"
description = "GOGO房総デジタルポイントラリー データベース 2024"
authors = ["ijknabla <ijknabla@gmail.com>"]
license = "MIT"
readme = "README.md"
include = [
    "gobo2024/gobo2024.db"
]

[tool.poetry.build]
generate-setup-file = false
script = "build.py"

[tool.poetry.scripts]
gobo2024 = "gobo2024.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
pydantic = "^2.8.2"
pyppeteer = "^2.0.0"
sqlalchemy = "^2.0.32"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"


[tool.poetry.group.static-test.dependencies]
mypy = "^1.11.2"
ruff = "^0.6.3"


[tool.poetry.group.dynamic-test.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "pyppeteer.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = ["ALL"]
ignore = [
    # Ignore incompatible rules
    "D203", "D212",
    # Ignore rules that may cause conflict with formatter
    "COM812",
    "ISC001",
    # Ignore not important rules
    "ANN101",
    "D100", "D101", "D102", "D103", "D104", "D106", "D107",
    "D205", "D404",
    # Ignore security rules
    "S311",
]

[tool.ruff.lint.extend-per-file-ignores]
"gobo2024/types.py" = [
    "ERA001",
    "FA102",
    "N815",
]
"tests/*.py" = [
    "S101",
]
